Updated stylus files
* Optimising divider stylus file
* Optimising links stylus file
* Optimising image stylus file

--- a/src/divider.styl
+++ b/src/divider.styl
@@ -1,7 +1,9 @@
-/*=============================
-  Divider
-=============================*/
-
+/* @group Divider */
 hr
-  border-width: 0.5px
-  border-color: color-gray
+  display: block
+  height: 1px
+  border: 0
+  border-top: 1px solid color-dark-grey
+  margin: 1em 0
+  padding: 0
+/* @end */
