--- a/src/image.styl
+++ b/src/image.styl
@@ -1,7 +1,5 @@
-/*=============================
-  Image
-=============================*/
-
+/* @group Image */
 img
-  margin-top: 0
-  margin-bottom: 10px
+  max-width: 100%
+  height: auto
+/* @end */
