--- a/src/link.styl
+++ b/src/link.styl
@@ -1,11 +1,8 @@
-/*=============================
-  Link
-=============================*/
-
+/* @group Links */
 a
-  color: color-blue
-  transition: transition
+  text-decoration: underline;
+  cursor: pointer;
 
   &:hover
-    cursor: pointer
-    color: color-black
+    color: color-dark-grey    
+/* @end */
