--- a/src/typography.styl
+++ b/src/typography.styl
@@ -1,15 +1,4 @@
-/*=============================
-  Typography
-=============================*/
-
-h1, h2, h3, h4, h5, h6, p
-  margin-top: 0
-  margin-bottom: 10px
-  font-family: font
-
-h1, h2, h3, h4, h5, h6
-  font-weight: 500
-
+/* @group Typography */
 h1
   font-size: typography-size-1
   line-height: 1.2
@@ -36,22 +25,6 @@ h6
 
 p
   font-size: typography-size-base
+  margin: 20px 0
 
-@media (max-width: 768px)
-  h1
-    font-size: typography-size-small-1
-
-  h2
-    font-size: typography-size-small-2
-
-  h3
-    font-size: typography-size-small-3
-
-  h4
-    font-size: typography-size-small-4
-
-  h5
-    font-size: typography-size-small-5
-
-  h6
-    font-size: typography-size-small-6
+/* @end */
