--- a/src/divider.styl
+++ b/src/divider.styl
@@ -1,9 +1,6 @@
 /* @group Divider */
 hr
-  display: block
-  height: 1px
-  border: 0
-  border-top: 1px solid color-dark-grey
-  margin: 1em 0
+  border-width: 1px
+  margin: 0
   padding: 0
 /* @end */
