--- a/src/util.styl
+++ b/src/util.styl
@@ -1,26 +1,14 @@
-/*=============================
-  Utilities
-=============================*/
-
-// Position
-.position-relative
-  position: relative
-
-.position-absolute
-  position: absolute
-
-.position-fixed
-  position: fixed
+/* @group Utilities */
 
 // Text
 .text-left
-  text-align: left;
+  text-align: left
 
 .text-center
-  text-align: center;
+  text-align: center
 
 .text-right
-  text-align: right;
+  text-align: right
 
 // Sizing
 .size-full-height
@@ -30,8 +18,8 @@
   width: 100%
 
 .size-full
-  width: 100%
   min-height: 100vh
+  width: 100%
 
 // Visibility
 .hidden
@@ -66,78 +54,15 @@
   flex-direction: row
 
 .center
-  flex-direction: column
-  justify-content: center
   align-items: center
-
-// Borders
-.border-black
-  border(color-black)
-
-.border-gray
-  border(color-gray)
-
-.border-white
-  border(color-white)
-
-.border-blue
-  border(color-blue)
-
-.border-red
-  border(color-red)
-
-.border-yellow
-  border(color-yellow)
-
-.border-green
-  border(color-green)
-
-.border-rounded
-  border-radius()
-
-.border-circle
-  border-radius: 50%
+  flex-direction: column
+  justify-content: center  
 
 // Colors
-.color-black
-  color: color-black
+.color-dark-grey
+  color: color-dark-grey
 
-.color-gray
-  color: color-gray
+.color-light-grey
+  color: color-light-grey
 
-.color-white
-  color: color-white
-
-.color-blue
-  color: color-blue
-
-.color-red
-  color: color-red
-
-.color-yellow
-  color: color-yellow
-
-.color-green
-  color: color-green
-
-// Backgrounds
-.background-black
-  background-color: color-black
-
-.background-gray
-  background-color: color-gray
-
-.background-white
-  background-color: color-white
-
-.background-blue
-  background-color: color-blue
-
-.background-red
-  background-color: color-red
-
-.background-yellow
-  background-color: color-yellow
-
-.background-green
-  background-color: color-green
+/* @end */
