--- a/src/base.styl
+++ b/src/base.styl
@@ -1,14 +1,9 @@
-/* @group Base */
-html, body
-  margin: 0
-  padding: 0
-
+/* @group Reset */
 body
-  color: color-black
+  color: color-dark-grey
   font-family: font
   font-size: typography-size-base
   font-weight: 400
-  line-height: 1.6
   margin: 0
   padding: 0
 /* @end */
