--- a/src/grid.styl
+++ b/src/grid.styl
@@ -1,39 +1,83 @@
 /* @group Grid */
-  .grid-flex
-    display: -webkit-box;
-    display: flex;
-  .row:after
-    content: '';
-    display: table;
-    clear: both;
-  .flex-1
-    -webkit-box-flex: 1;
-    flex: 1;
-  .flex-2
-    -webkit-box-flex: 2;
-    flex: 2;
-  .flex-3
-    -webkit-box-flex: 3;
-    flex: 3;
-  .flex-4
-    -webkit-box-flex: 4;
-    flex: 4;
-  .flex-5
-    -webkit-box-flex: 5;
-    flex: 5;
-  .flex-6
-    -webkit-box-flex: 6;
-    flex: 6;
-  .flex-7
-    -webkit-box-flex: 7;
-    flex: 7;
-  .flex-8
-    -webkit-box-flex: 8;
-    flex: 8;
-  .flex-9
-    -webkit-box-flex: 9;
-    flex: 9;
-  .flex-10
-    -webkit-box-flex: 10;
-    flex: 10;
+
+/*csslint box-sizing: false*/
+
+.container
+  -webkit-box-sizing: border-box
+  -moz-box-sizing: border-box   
+  box-sizing: border-box
+  margin: 0 auto
+  max-width: 960px
+  padding: 0 20px
+  position: relative
+  width: 100%
+
+.grid-flex
+    display: -webkit-box
+    display: flex
+
+.row:after
+    clear: both
+    content: ''
+    display: table
+
+.flex-1
+    -webkit-box-flex: 1
+    -moz-box-flex: 1
+    -ms-box-flex: 1
+    flex: 1
+
+.flex-2
+    -webkit-box-flex: 2
+    -moz-box-flex: 2
+    -ms-box-flex: 2
+    flex: 2
+
+.flex-3
+    -webkit-box-flex: 3
+    -moz-box-flex: 3
+    -ms-box-flex: 3
+    flex: 3
+
+.flex-4
+    -webkit-box-flex: 4
+    -moz-box-flex: 4
+    -ms-box-flex: 4
+    flex: 4
+
+.flex-5
+    -webkit-box-flex: 5
+    -moz-box-flex: 5
+    -ms-box-flex: 5
+    flex: 5
+
+.flex-6
+    -webkit-box-flex: 6
+    -moz-box-flex: 6
+    -ms-box-flex: 6
+    flex: 6
+
+.flex-7
+    -webkit-box-flex: 7
+    -moz-box-flex: 7
+    -ms-box-flex: 7
+    flex: 7
+
+.flex-8
+    -webkit-box-flex: 8
+    -moz-box-flex: 8
+    -ms-box-flex: 8
+    flex: 8
+
+.flex-9
+    -webkit-box-flex: 9
+    -moz-box-flex: 9
+    -ms-box-flex: 9
+    flex: 9
+
+.flex-10
+    -webkit-box-flex: 10
+    -moz-box-flex: 10
+    -ms-box-flex: 10
+    flex: 10
 /* @end */
