--- a/src/config.styl
+++ b/src/config.styl
@@ -1,20 +1,19 @@
-/* @group Config */
-
 /* Table Of Content
 ==================================================
-	# Config
+	# Base
 	# Grid
-	# Reset
+	# Typography
 	# Links
 	# Lists
-	# Typography
-	# Utilities
+	# Image
+	# Divider
+	# Util
 ==================================================
 */
-
 // Colours
-color-dark-grey = #212121
+color-dark-grey  = #212121
 color-light-grey = #878787
+color-light-blue = #1EAEDB
 
 // Fonts
 font = 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', sans-serif
@@ -38,5 +37,3 @@ typography-size-small-3 = round(typography-size-base * (typography-size-small-ra
 typography-size-small-4 = round(typography-size-base * (typography-size-small-ratio ** 3), 3)
 typography-size-small-5 = round(typography-size-base * (typography-size-small-ratio ** 2), 3)
 typography-size-small-6 = round(typography-size-base * typography-size-small-ratio, 3)
-
-/* @end */
