--- a/src/link.styl
+++ b/src/link.styl
@@ -1,8 +1,10 @@
 /* @group Links */
 a
-  cursor: pointer;
-  text-decoration: underline;
+  background-color: transparent
+  color: color-light-blue
 
+  &:active,
   &:hover
-    color: color-dark-grey    
+    color: color-dark-grey
+    
 /* @end */
