--- a/src/base.styl
+++ b/src/base.styl
@@ -1,4 +1,24 @@
-/* @group Reset */
+/* @group Base */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary
+  display: block
+
+html
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+
 body
   color: color-dark-grey
   font-family: font
@@ -6,4 +26,5 @@ body
   font-weight: 400
   margin: 0
   padding: 0
+  word-wrap: break-word
 /* @end */
