--- a/src/typography.styl
+++ b/src/typography.styl
@@ -1,30 +1,62 @@
 /* @group Typography */
 h1
   font-size: typography-size-1
+  font-weight: 500
   line-height: 1.2
+  margin-bottom: 1.6
+  margin-top: 0
 
 h2
   font-size: typography-size-2
+  font-weight: 500
   line-height: 1.25
+  margin-bottom: 1.6
+  margin-top: 0
 
 h3
   font-size: typography-size-3
+  font-weight: 500
   line-height: 1.3
+  margin-bottom: 1.6
+  margin-top: 0
 
 h4
   font-size: typography-size-4
+  font-weight: 500
   line-height: 1.35
+  margin-bottom: 1.6
+  margin-top: 0
 
 h5
   font-size: typography-size-5
+  font-weight: 500
   line-height: 1.5
+  margin-bottom: 1.6
+  margin-top: 0
 
 h6
   font-size: typography-size-6
+  font-weight: 500
   line-height: 1.6
 
 p
   font-size: typography-size-base
   margin: 1.6 0
+
+/* csslint ignore:start */
+@media (max-width: 768px)
+  h1
+    font-size: typography-size-small-1
+  h2
+    font-size: typography-size-small-2
+  h3
+    font-size: typography-size-small-3
+  h4
+    font-size: typography-size-small-4
+  h5
+    font-size: typography-size-small-5
+  h6
+    font-size: typography-size-small-6
+/* csslint ignore:end */
 
 /* @end */
