Updating colours to Level AAA conformance

--- a/src/base.styl
+++ b/src/base.styl
@@ -20,7 +20,7 @@ html
   -webkit-text-size-adjust: 100%;
 
 body
-  color: color-dark-grey
+  color: color-black
   font-family: font
   font-size: typography-size-base
   font-weight: 400
