--- a/src/button.styl
+++ b/src/button.styl
@@ -14,9 +14,9 @@ button, .button, [type=submit]
   color: color-white
   font-size: typography-size-base
 
-  background: color-dark-grey
+  background: color-black
 
-  border-round(color-dark-grey)
+  border-round(color-black)
 
   transition: transition
 
@@ -31,9 +31,9 @@ button, .button, [type=submit]
     cursor: not-allowed
 
   &.outline
-    color: color-dark-grey
+    color: color-black
     background: none
 
     &:hover, &:focus
       color: color-white
-      background: color-dark-grey
+      background: color-black
