--- a/src/config.styl
+++ b/src/config.styl
@@ -11,9 +11,11 @@
 ==================================================
 */
 // Colours
-color-dark-grey  = #212121
-color-light-grey = #878787
-color-light-blue = #1EAEDB
+color-black  	= #000000
+color-grey 		= #696969
+color-blue		= #3344dd
+color-red			= #b50010
+color-purple	= #804180
 
 // Fonts
 font = 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', sans-serif
