--- a/src/link.styl
+++ b/src/link.styl
@@ -1,10 +1,10 @@
 /* @group Links */
 a
   background-color: transparent
-  color: color-light-blue
+  color: color-blue
 
   &:active,
   &:hover
-    color: color-dark-grey
+    color: color-black
     
 /* @end */
