--- a/src/util.styl
+++ b/src/util.styl
@@ -59,10 +59,10 @@
   justify-content: center  
 
 // Colors
-.color-dark-grey
-  color: color-dark-grey
+.color-black
+  color: color-black
 
-.color-light-grey
-  color: color-light-grey
+.color-grey
+  color: color-grey
 
 /* @end */
