--- a/src/card.styl
+++ b/src/card.styl
@@ -6,7 +6,7 @@
   display: flex
   flex-direction: column
   margin-bottom: 10px
-  border-round(color-dark-grey)
+  border-round(color-black)
 
   .card-content
     margin: 0
