--- a/src/form.styl
+++ b/src/form.styl
@@ -12,16 +12,16 @@ input[type=text], input[type=password], input[type=email], input[type=search], i
   font-size: typography-size-base
   background: color-white
 
-  border-round(color-dark-grey)
+  border-round(color-black)
 
   transition: transition
 
   &:hover
-    border-color: color-dark-grey
+    border-color: color-black
 
   &:focus
     outline: none
-    border-color: color-light-grey
+    border-color: color-grey
 
 textarea
   min-height: 70px
