--- a/src/base.styl
+++ b/src/base.styl
@@ -19,7 +19,7 @@ html
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 
-body
+*
   color: color-black
   font-family: font
   font-size: typography-size-base
