--- a/src/typography.styl
+++ b/src/typography.styl
@@ -36,7 +36,7 @@ h6
 
 p
   font-size: typography-size-base
-  margin: 1.6 0
+  margin: 0.5em 0 0.5em 0
 
 /* csslint ignore:start */
 @media (max-width: 768px)
