--- a/src/base.styl
+++ b/src/base.styl
@@ -15,16 +15,16 @@ summary
   display: block
 
 html
-  font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+  font-family: sans-serif
+  -ms-text-size-adjust: 100%
+  -webkit-text-size-adjust: 100%
 
 *
   color: color-black
   font-family: font
   font-size: typography-size-base
   font-weight: 400
-  margin: 0
+  margin: 0.25em 0
   padding: 0
   word-wrap: break-word
 /* @end */
