--- a/src/link.styl
+++ b/src/link.styl
@@ -2,9 +2,15 @@
 a
   background-color: transparent
   color: color-blue
+  text-decoration: none
+
+  &:focus
+    outline: thin dotted
+    outline: 1px auto -webkit-focus-ring-color
+    outline-offset: -2px
 
   &:active,
   &:hover
     color: color-black
-    
+
 /* @end */
