* Added button stylus element * Added code stylus element * Fixed monospace repetition * Deleted unused stylus * Optimised divider

--- a/src/divider.styl
+++ b/src/divider.styl
@@ -1,6 +1,7 @@
 /* @group Divider */
 hr
-  border-width: 1px
-  margin: 0
-  padding: 0
+  border-width: 0
+  border-top: 1px solid color-black;
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
 /* @end */
