* Fixed button, code, config, divider  stylus

--- a/src/button.styl
+++ b/src/button.styl
@@ -1,39 +1,19 @@
-/*=============================
-  Button
-=============================*/
-
+/* @group Button */
 button, .button, [type=submit]
-  height: 45px
-
-  margin-bottom: 10px
-  padding: 10px 30px
-
-  outline: none
-  text-decoration: none
-
-  color: color-white
+  background: color-white
+  color: color-black
   font-size: typography-size-base
-
-  background: color-black
-
-  border-round(color-black)
-
+  padding: 20px
+  text-decoration: none
   transition: transition
-
-  &:hover, &:focus
-    opacity: .9
-
-  &:active
-    opacity: .7
-
-  &[disabled]
-    opacity: 0.8
-    cursor: not-allowed
-
-  &.outline
-    color: color-black
-    background: none
-
-    &:hover, &:focus
-      color: color-white
-      background: color-black
+&:hover, &:focus
+  opacity: 0.9
+&:active
+  opacity: 0.7
+&.outline
+  background: none
+  color: color-white
+&:hover, &:focus
+  background: color-white
+  color: color-black  
+/* @end */
