--- a/src/code.styl
+++ b/src/code.styl
@@ -1,20 +1,17 @@
-/*=============================
-  Code
-=============================*/
-
+/* @group Code */
 pre
-  margin-top: 0
   margin-bottom: 10px
+  margin-top: 0
 
   code
     display: block
-    padding: 10px 10px
+    padding: 10px
     white-space: pre-wrap
     word-wrap: break-word
-
 code
-  padding: 2px
-  white-space: nowrap
   background: #E7E7E7
   border-round(#D7D7D7)
   font-family: "Consolas", "Monaco", "Menlo", monospace
+  padding: 2px
+  white-space: nowrap
+/* @end */
