--- a/src/config.styl
+++ b/src/config.styl
@@ -11,6 +11,7 @@
 ==================================================
 */
 // Colours
+color-white  	= #FFFFFF
 color-black  	= #000000
 color-grey 		= #696969
 color-blue		= #3344dd
