Updated button stylus element

--- a/src/button.styl
+++ b/src/button.styl
@@ -1,9 +1,10 @@
 /* @group Button */
 button, .button, [type=submit]
+  background: #color-grey;
   background: color-white
   color: color-black
   font-size: typography-size-base
-  padding: 20px
+  padding: 9px 20px;
   text-decoration: none
   transition: transition
 &:hover, &:focus
@@ -15,5 +16,5 @@ button, .button, [type=submit]
   color: color-white
 &:hover, &:focus
   background: color-white
-  color: color-black  
+  color: color-black
 /* @end */
