--- a/src/config.styl
+++ b/src/config.styl
@@ -13,7 +13,8 @@
 // Colours
 color-white  	= #FFFFFF
 color-black  	= #000000
-color-grey 		= #696969
+color-lighter-grey 		= #f2f2f2
+color-grey 		= #e1e2e2
 color-blue		= #3344dd
 color-red			= #b50010
 color-purple	= #804180
