Fixed button styles, updated CSS

--- a/src/config.styl
+++ b/src/config.styl
@@ -3,21 +3,23 @@
 	# Base
 	# Grid
 	# Typography
+	# Button
 	# Links
 	# Lists
 	# Image
+	# Code
 	# Divider
 	# Util
 ==================================================
 */
 // Colours
-color-white  	= #FFFFFF
-color-black  	= #000000
-color-lighter-grey 		= #f2f2f2
-color-grey 		= #e1e2e2
-color-blue		= #3344dd
-color-red			= #b50010
-color-purple	= #804180
+color-white  				= #FFFFFF
+color-black  				= #000000
+color-lighter-grey 	= #f2f2f2
+color-grey 					= #e1e2e2
+color-blue					= #3344dd
+color-red						= #b50010
+color-purple				= #804180
 
 // Fonts
 font = 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', sans-serif
