Fixed styling issues

--- a/src/button.styl
+++ b/src/button.styl
@@ -1,9 +1,9 @@
 /* @group Button */
 button, .button, [type=submit]
-  background: #color-grey
+  background: color-grey
+  border:0
   cursor: pointer
-  margin: 10px
-  padding: 12px 12px
+  padding: 9px 20px
   text-decoration: none
   text-align: center
   transition: all 150ms linear
@@ -17,5 +17,5 @@ button, .button, [type=submit]
   &:focus
     background: color-lighter-grey
     opacity: 0.7
-    transition: all 150ms linear  
+    transition: all 150ms linear
 /* @end */
