Fixed style issues

--- a/src/base.styl
+++ b/src/base.styl
@@ -14,46 +14,9 @@ html
   -ms-text-size-adjust: 100%
   -webkit-text-size-adjust: 100%
 
-body
-  margin 0
+textarea
+  border-color: color-grey
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary
-  display: block
-
-audio,
-canvas,
-progress,
-video
-  display inline-block
-
-audio:not([controls])
-  display none
-  height 0
-
-progress
-  vertical-align baseline
-
-b,
-strong
-  font-weight inherit
-  font-weight bolder
-
-code,
-kbd,
-pre,
-samp
-  font-family monospace
-  font-size 1em
+input
+    padding 0.25em
 /* @end */
