--- a/src/code.styl
+++ b/src/code.styl
@@ -1,17 +1,9 @@
 /* @group Code */
-pre
-  margin-bottom: 10px
-  margin-top: 0
-
-  code
-    display: block
-    padding: 10px
-    white-space: pre-wrap
-    word-wrap: break-word
-code
-  background: #E7E7E7
-  border-round(#D7D7D7)
+pre, code
+  background: color-lighter-grey
+  display: block
   font-family: "Consolas", "Monaco", "Menlo", monospace
-  padding: 2px
-  white-space: nowrap
+  padding: 10px
+  white-space: pre-wrap
+  word-wrap: break-word
 /* @end */
