Updated styluses and CSS

--- a/src/base.styl
+++ b/src/base.styl
@@ -1,5 +1,4 @@
 /* @group Base */
-/*csslint universal-selector:false */
 *
   color: color-black
   font-family: font
@@ -16,6 +15,7 @@ html
 
 textarea
   border-color: color-grey
+  min-height: 70px
 
 input
     padding 0.25em
