--- a/src/base.styl
+++ b/src/base.styl
@@ -14,8 +14,11 @@ html
   -webkit-text-size-adjust: 100%
 
 textarea
-  border-color: color-grey
-  min-height: 70px
+  -moz-box-sizing:border-box
+  -webkit-box-sizing:border-box
+  border-color:#e1e2e2
+  box-sizing:border-box
+  min-height:70px
 
 input
     padding 0.25em
