--- a/src/base.styl
+++ b/src/base.styl
@@ -19,6 +19,8 @@ textarea
   border-color:#e1e2e2
   box-sizing:border-box
   min-height:70px
+  padding:10px;
+  width:100%
 
 input
     padding 0.25em
