Updated table styles

--- a/src/table.styl
+++ b/src/table.styl
@@ -2,10 +2,23 @@
 table
   border-collapse: collapse
   border-spacing: 0
+  empty-cells: show
+  border: 1px solid color-grey
   padding-bottom: 25px
 
+thead
+  background-color: color-lighter-grey
+  color: color-black
+  text-align: left
+  vertical-align: bottom
+
 td, th
-  border-bottom: 1px solid color-lighter-grey
-  padding: 5px
+  background-color: transparent
+  border-left: 1px solid color-grey
+  border-width: 0 0 0 1px
+  font-size: inherit
+  margin: 0
+  overflow: visible
+  padding: 6px 12px
   vertical-align: bottom
 /* @end */
