Updated button style

--- a/src/button.styl
+++ b/src/button.styl
@@ -7,15 +7,27 @@ button, .button, [type=submit]
   text-align: center
   text-decoration: none
   transition: all 150ms linear
+  user-select: none
+  vertical-align: middle
+  white-space: nowrap
   &:active
     opacity: 0.75
     transition: all 150ms linear
+    text-decoration: none
   &:hover
     background: color-lighter-grey
     opacity: 0.85
     transition: all 150ms linear
+    text-decoration: none
   &:focus
     background: color-lighter-grey
     opacity: 0.7
     transition: all 150ms linear
+    text-decoration: none
+  &[disabled],
+  &:disabled,
+  &.disabled
+    cursor: default
+    opacity: .5
+    pointer-events: none
 /* @end */
