Updated Button style

--- a/src/button.styl
+++ b/src/button.styl
@@ -11,6 +11,9 @@ button, .button, [type=submit]
   user-select: none
   vertical-align: middle
   white-space: nowrap
+  &:link, &:visited {
+    color: color-black
+  }
   &:active
     color: color-black
     opacity: 0.75
