Fixing style issues

--- a/src/base.styl
+++ b/src/base.styl
@@ -22,6 +22,19 @@ textarea
   padding:10px;
   width:100%
 
-input
-    padding 0.25em
+input,
+textarea,
+select,
+fieldset,
+pre,
+blockquote,
+dl,
+figure,
+table,
+p,
+ul,
+ol,
+form
+  margin-bottom: 1.5rem
+
 /* @end */
