--- a/src/list.styl
+++ b/src/list.styl
@@ -16,7 +16,7 @@ ol,
 ul.square,
 ul.circle,
 ul.disc
-    margin-left: typography-size-base
+    margin: 1em 2.5em
 
 ul.square
     list-style: square outside
